Changelog for ghcid (* = breaking change)

*   Add loadFilePosEnd to Load
    If a command exits unexpectedly return a failing exit code
    #120, use absolute paths everywhere, in case ghci does a cd
    Add showPaths function to exercise ":show paths"
    #127, use Loaded GHCi configuration message to add .ghci restart
    #141, restart if .ghcid changes
    #151, make "All good" green
    #109, support OverloadedStrings and RebindableSyntax together
    Remove support for GHC 7.6
    #87, enable HSPEC colors if possible (POSIX only)
    #147, move some :set flags to the command line if possible
    #148, enable -ferror-spans by default
*   #144, allow ANSI escape codes in loadMessage
    #144, use color GHC messages where possible
    #139, add --color=never to not show Bold output
    #142, add startGhciProcess which takes CreateProcess
    #146, add --max-messages=N to limit to N messages
0.6.10, released 2018-02-06
    #96, make it work even if -fdiagnostics-color is active
    #130, pass -fno-it to reduce memory leaks
    #132, work even if -fhide-source-paths is set
    Add isLoading function to test the constructor
0.6.9, released 2018-01-26
    #121, add a --poll flag to use polling instead of notifiers
    Require time-1.5 or above
    #124, add timestamp to "All good" message
    After the test completes write a message
0.6.8, released 2017-11-10
    #110, work even if -v0 is passed to ghci
    Read additional arguments from .ghcid file if present
0.6.7, released 2017-09-17
    #104, add --ignore-loaded flag for use with -fobject-code
    #103, deal with new GHC error formatting
0.6.6, released 2016-11-11
    #89, exit sooner when the child process exits unexpectedly
    Add Eq instance for Ghci
    #88, add a --project flag
    Rename --notitle flag to --no-title
0.6.5, released 2016-08-10
    #82, properly deal with warning messages including spans
    #78, support boot files better
    Better support for dealing with GHC 8.0 call stack messages