@@ -69,9 +69,7 @@ parseLoad (map Esc -> xs) = nubOrd $ f xs
             | unescapeE x == "Module imports form a cycle:"
             , (xs,rest) <- span (isPrefixOfE " ") xs
             , let ms = [takeWhile (/= ')') x | x <- xs, '(':x <- [dropWhile (/= '(') $ unescapeE x]]
-            = Message Error "" (0,0) (0,0) (map fromEsc $ x:xs) :
-              -- need to label the modules in the import cycle so I can find them
-              [Message Error m (0,0) (0,0) [] | m <- nubOrd ms] ++ f rest
+            = [Message Error m (0,0) (0,0) (map fromEsc $ x:xs) | m <- nubOrd ms] ++ f rest
 
         -- Loaded GHCi configuration from C:\Neil\ghcid\.ghci
         f (x:xs)
